Correction v2.0 add z-index for dropdown

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -39,6 +39,7 @@ ul, ol{
     border-radius: 4px;
     margin: -1px 0 0 -1px;
     padding-bottom: 60px;
+    z-index: 50;
 }
 .popover h2{
     font-size: 16px;
@@ -48,7 +49,7 @@ ul, ol{
     margin-bottom: 5px;
 }
 .amenities .popover{
-    padding-top: 10% ;
+    padding-top: 10%;
     padding-bottom: 10%;
 }
 .locations:hover > .popover{
